[gd_scene load_steps=4 format=3 uid="uid://c6866y8qh0ti5"]

[ext_resource type="Script" uid="uid://dlm3d118kg84m" path="res://Scripts/Traps/throwing_spikes.gd" id="1_gnesi"]
[ext_resource type="Texture2D" uid="uid://bhifx4n78f1ab" path="res://Assets/Traps/throwing_spikes.png" id="1_oe6k5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gnesi"]
radius = 2.0
height = 14.0

[node name="Throwing_Spikes" type="Area2D" node_paths=PackedStringArray("sprite") groups=["traps"]]
scale = Vector2(0.8, 0.8)
collision_layer = 64
collision_mask = 17
script = ExtResource("1_gnesi")
sprite = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_oe6k5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gnesi")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
